--- a/package.json
+++ b/package.json
@@ -1,9 +1,26 @@
 {
   "name": "togl",
-  "module": "index.ts",
+  "version": "0.0.9999",
+  "description": "A command line tool to convert binary grid patterns into ASCII art drawings",
+  "main": "dist/index.js",
   "type": "module",
-  "private": true,
+  "bin": {
+    "togl": "./dist/index.js"
+  },
+  "scripts": {
+    "build": "bun build src/index.ts --outdir dist --target bun",
+    "compile": "bun build src/index.ts --compile --outfile togl",
+    "compile:all": "bun run compile:linux && bun run compile:macos && bun run compile:windows",
+    "compile:linux": "bun build src/index.ts --compile --target=bun-linux-x64 --outfile dist/togl-linux",
+    "compile:macos": "bun build src/index.ts --compile --target=bun-darwin-x64 --outfile dist/togl-macos",
+    "compile:windows": "bun build src/index.ts --compile --target=bun-windows-x64 --outfile dist/togl-windows.exe",
+    "prepublish": "bun run build",
+    "test": "bun test",
+    "test:watch": "bun test --watch",
+    "dev": "bun src/index.ts"
+  },
   "devDependencies": {
+    "@biomejs/biome": "2.2.3",
     "@types/bun": "latest"
   },
   "peerDependencies": {
@@ -12,5 +29,27 @@
   "dependencies": {
     "@optique/core": "^0.4.0",
     "@optique/run": "^0.4.0"
-  }
+  },
+  "keywords": [
+    "cli",
+    "ascii-art",
+    "binary",
+    "grid",
+    "pixel-art",
+    "terminal"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jcha0713/togl"
+  },
+  "license": "MIT",
+  "engines": {
+    "bun": ">=1.0.0"
+  },
+  "files": [
+    "dist/",
+    "togl",
+    "README.md",
+    "LICENSE"
+  ]
 }
